--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
-                                            <p>Bloc's Full Stack Web Development bootcamp covers programming fundamentals, front-end and back-end web development, and specialized projects to pull everything together. In thid program I have learned object-oriented programming, test-driven development, database management, SQL, full stack web development, and API design by using Ruby, JavaScript, Rails, and Angular, among other technologies.</p>
+                                            <p>Bloc's Full Stack Web Development bootcamp covers programming fundamentals, front-end and back-end web development, and specialized projects to pull everything together. In this program I have learned object-oriented programming, test-driven development, database management, SQL, full stack web development, and API design by using Ruby, JavaScript, Rails, and Angular, among other technologies.</p>
                                         </div><!-- /timeline-body -->
                                     </div> <!-- /timeline-content -->
                                 </div><!-- /timeline-panel -->
