--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             
             <div class="short-info wow fadeInUp">
               <h3>What I Do ?</h3>
-              <p>I am currently working as a creative consultant for Getty Images, the worldwide leader in visual communication. My main functions are assisting major advertising and productions companies in utilizing Getty creative assets to accomplish their marketing goals and convey their brand and digital strategy, as well as collaborating with our internal departments at to optimize revenue potential.</p>
+              <p>I am currently working as a creative consultant for Getty Images, the worldwide leader in visual communication. My main functions are assisting major advertising and productions companies in utilizing Getty creative assets to accomplish their marketing goals and convey their brand and digital strategy, as well as collaborating with our internal departments to optimize revenue potential.</p>
             </div>
 
             <div class="short-info wow fadeInUp">
